--- a/JTea_DPS926_Assignment1/MainPage.xaml
+++ b/JTea_DPS926_Assignment1/MainPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="JTea_DPS926_Assignment1.MainPage">
-
+    <NavigationPage.TitleView>
+        <Label TextColor="White" FontSize="20" FontAttributes="Bold" Text="Cash Register App" VerticalTextAlignment="Center"/>
+    </NavigationPage.TitleView>
     <Grid RowSpacing="10" ColumnSpacing="10" Padding="40" Opacity="10">
 
         <Grid.RowDefinitions>
@@ -49,8 +51,9 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <Grid Padding="10">
+                        <Grid>
                             <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
@@ -60,6 +63,7 @@
                             </Grid.ColumnDefinitions>
                             <Label Grid.Column="0" Text="{Binding name}" FontAttributes="Bold" />
                             <Label Grid.Column="4" Text="{Binding quantity}" VerticalOptions="End" />
+                            <Label Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" TextColor="Red" Text="{Binding price, StringFormat='($ {0:N})'}" VerticalOptions="End" />
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
