--- a/JTea_DPS926_Assignment1/RestockPage.xaml
+++ b/JTea_DPS926_Assignment1/RestockPage.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="JTea_DPS926_Assignment1.PurchasesPage">
+             x:Class="JTea_DPS926_Assignment1.RestockPage">
     <NavigationPage.TitleView>
-        <Label TextColor="White" FontSize="20" FontAttributes="Bold" Text="Purchase History" VerticalTextAlignment="Center"/>
+        <Label TextColor="White" FontSize="20" FontAttributes="Bold" Text="Restock Products" VerticalTextAlignment="Center"/>
     </NavigationPage.TitleView>
     <ContentPage.Content>
         <StackLayout>
