feature: history detail page

--- a/JTea_DPS926_Assignment1/HistoryPage.xaml
+++ b/JTea_DPS926_Assignment1/HistoryPage.xaml
@@ -6,8 +6,7 @@
         <StackLayout>
             <ListView  
                   ItemsSource="{Binding history}"
-                  ItemSelected="ListView_ItemSelected"
-                  ItemTapped="ListView_ItemTapped"
+                  ItemTapped="OnHistoryTapped"
                   RowHeight="60">
                 <ListView.ItemTemplate>
                     <DataTemplate>
