--- a/JTea_DPS926_Assignment1/HistoryDetailPage.xaml
+++ b/JTea_DPS926_Assignment1/HistoryDetailPage.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="JTea_DPS926_Assignment1.HistoryDetailPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+        <StackLayout 
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+                HorizontalOptions="CenterAndExpand">
+            <Label TextColor="Black" Text="{Binding history.name, StringFormat='Product: {0}'}"/>
+            <Label TextColor="Black" Text="{Binding history.quantity, StringFormat='Quantity: {0}'}"/>
+            <Label TextColor="Black" Text="{Binding history.purchaseDate, StringFormat='Date: {0}'}"/>
+            <Label TextColor="Black" Text="{Binding history.totalPrice, StringFormat='Total amount: ${0:F2}'}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
